--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
+  <title>site atelier Wi-Filles</title>
+  <meta name="description" content="site pour Wi-filles dans le cadre d'un atelier">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
@@ -24,8 +24,126 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <!-- start header -->
+  <header class="w-100 bg-secondary bg-gradient text-white">
+    <div class="container">
+      <h1 class="display-4">mon site</h1>
+    </div>
+  </header>
+  <!-- end header -->
+
+  <!-- start nav -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Mon menu</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown
+                </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+            </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+<!-- end nav -->
+
+<!-- start main -->
+<main>
+  <!-- start article with 3 card -->
+  <article class="d-flex justify-content-around mt-5">
+    <!-- card1 -->
+    <div class="card" style="width: 18rem;">
+      <img src="img/image.png" class="card-img-top" alt="logo">
+      <div class="card-body">
+        <h5 class="card-title">un titre</h5>
+        <p class="card-text">Il faut mettre du texte.</p>
+        <a href="#" class="btn btn-primary">un boutton</a>
+      </div>
+    </div>
+    <!-- card2 -->
+    <div class="card" style="width: 18rem;">
+      <img src="img/image.png" class="card-img-top" alt="logo">
+      <div class="card-body">
+        <h5 class="card-title">encore un titre</h5>
+        <p class="card-text">Il faut encore mettre du texte.</p>
+        <a href="#" class="btn btn-primary">encore un boutton</a>
+      </div>
+    </div>
+    <!-- card3 -->
+    <div class="card" style="width: 18rem;">
+      <img src="img/image.png" class="card-img-top" alt="logo">
+      <div class="card-body">
+        <h5 class="card-title">encore encore un titre</h5>
+        <p class="card-text">Il faut mettre du texte mais c'est la dernière fois.</p>
+        <a href="#" class="btn btn-primary">toujours un boutton</a>
+      </div>
+    </div>
+  </article>
+  <!-- end article -->
+
+  <!-- start modal -->
+  <!-- Button trigger modal -->
+  <div class="d-flex justify-content-center mt-5">
+    <button type="button" class="btn btn-primary mt-2" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+      je suis un boutton
+    </button>
+  </div>
+  <!-- end button -->
+
+  <!-- Modal -->
+  <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel">YouTube</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <iframe width="450" height="315" src="https://www.youtube.com/embed/TttLfs9sXLQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Understood</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- end modal -->
+</main>
+<!-- end main -->
+
+<!-- start footer -->
+<footer class="w-100 bg-secondary bg-gradient text-white position-absolute bottom-0 end-0">
+  <div class="container">
+    <h1 class="display-4">fin de mon site</h1>
+  </div>
+</footer>
+<!-- end footer -->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
